infraestructure/k8s/manifests/api/common/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nlwunite-backend-api
  namespace: nlwunite
spec:
  type: ClusterIP
  selector:
    app: nlwunite-backend-api
  ports:
  - protocol: TCP
    port: 3333
    targetPort: 3333
