infraestructure/k8s/manifests/api/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nlwunite-backend-api
  namespace: nlwunite
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nlwunite-backend-api
            port:
              number: 3333
